@@ -1,6 +1,8 @@
 CHANGELOG
 
 1.5.8
+* PanAPIConnector::register_sendUpdate() new IP registration function
+
 utils:
 service-edit: new filters 'object is.unused.recursive' to check if an object is used in groups/nested groups which are not used either
 
